# ip

./: .gitignore  LICENSE  README.en.md  README.md  benchmark.py  download_ip_data.sh  main.py  pyproject.toml  requirements.txt  test.py  update_GeoLite2.sh  upgrade_GeoLite2.sh  upgrade_ip2region.py
docs/: load_test.md
src/: main.py  update_geolite2.sh  update_ip2region.py
src/ip/: __init__.py  main.py  update_geolite2.sh  update_ip2region.py  xdbSearcher.py
src/ip/static/: more.js
src/ip/templates/: base.html  whois.html
src/templates/: index.html  more.html  navigator.html
static/: index.js  navigator.js  script.js  scripts.js  styles.css
static/favicon_io/: about.txt  site.webmanifest
templates/: base.html  headers.html  index.html  more.html  navigator.html  query.html  whois.html
